@@ -12,12 +12,10 @@ Density, distribution function and random generation for a continuous
 empirical distribution.
 }
 \usage{
-dempiricalC(x, min, max, values, prob=rep(1, length(values)), log=FALSE)
-pempiricalC(q, min, max, values, prob=rep(1, length(values)), lower.tail=TRUE,
-	  log.p=FALSE)
-qempiricalC(p, min, max, values, prob=rep(1, length(values)), lower.tail=TRUE,
-	  log.p=FALSE)
-rempiricalC(n, min, max, values, prob=rep(1, length(values)))
+dempiricalC(x, min, max, values, prob=NULL, log=FALSE)
+pempiricalC(q, min, max, values, prob=NULL, lower.tail=TRUE, log.p=FALSE)
+qempiricalC(p, min, max, values, prob=NULL, lower.tail=TRUE, log.p=FALSE)
+rempiricalC(n, min, max, values, prob=NULL)
 }
 \examples{
 prob <- c(2, 3, 1, 6, 1)
@@ -25,6 +23,23 @@ values <- 1:5
 par(mfrow=c(1, 2))
 curve(dempiricalC(x, min=0, max=6, values, prob), from=-1, to=7, n=1001)
 curve(pempiricalC(x, min=0, max=6, values, prob), from=-1, to=7, n=1001)
+
+## Varying values
+(values <- matrix(1:10, ncol=5))
+## the first x apply to the first row
+## the second x to the second one
+dempiricalC(c(1, 1), values, min=0, max=11)
+
+
+##Use with mc2d 
+val <- c(100, 150, 170, 200)
+pr <- c(6, 12, 6, 6)
+out <- c("min", "mean", "max")
+##First Bootstrap in the uncertainty dimension
+##with rempirical D
+(x <- mcstoc(rempiricalD, type = "U", outm = out, nvariates = 30, values = val, prob = pr))
+##Continuous Empirical distribution in the variability dimension
+mcstoc(rempiricalC, type = "VU", values = x, min=90, max=210)
 
 
 
@@ -53,8 +68,15 @@ density is:
 \samp{p} values being normalized to give the distribution a unit
 area.
 
-This function is not vectorized. It can not currently be use with
-varying parameters.
+\samp{min} and/or \samp{max} and/or \samp{values} and/or \samp{prob}
+may vary: in that case, \samp{min} and/or \samp{max} should be
+vector(s). \samp{values} and/or \samp{prob} should be matrixes, the
+first row being used for the first element of \samp{x}, \samp{q},
+\samp{p} or the first random value, the second row for the second
+element of \samp{x}, \samp{q}, \samp{p} or random value, ...
+Recycling is permitted if the number of elements of \samp{min} or
+\samp{max} or the number of rows of \samp{prob} and \samp{values} are
+equal or equals one.
 }
 \value{
 \samp{dempiricalC} gives the density, \samp{pempiricalC} gives the
